--- a/assets/common/common.less
+++ b/assets/common/common.less
@@ -31,14 +31,19 @@ time, mark, audio, video {
   font: inherit;
   vertical-align: baseline;
 }
-body{color: #7E7E7E;font-size: 12px;background-color: #0e0e0e;}
+body{color: #7E7E7E;font-size: 12px;	background-repeat:no-repeat;
+  font-family: Helvetica, 'Hiragino Sans GB', 'Microsoft Yahei', '微软雅黑', Arial, sans-serif;}
 
 .clear{clear: both;}
 img {border:0}
 ul li{list-style-type:none;}
-a{color: #848999;text-decoration:none;}
+a{color: #2F323D;text-decoration:none;}
 select{-webkit-appearance: none;-moz-appearance:none;appearance:none;background-color: #fff;display: inline-block;border: 0;outline: 0;font-family: 'Microsoft YaHei',arial,'Hiragino Sans GB',sans-serif,"宋体";}
 select option{width: 100%;}
 select::-ms-expand { display: none; }
 *{-webkit-tap-highlight-color:rgba(0,0,0,0);}
 [v-cloak] {display: none;}
+.bg{    position: absolute;height: 100%;
+  top: 0;left: 0;width: 100%;
+  background-color: #000000; /* 浏览器不支持的时候显示 */
+  background-image: radial-gradient(#FFFFFF, #FFFFFF, #EEEEEE); /* 标准的语法（必须放在最后） */}
